Automatically create token if token file is missing